--- a/templates/base.html
+++ b/templates/base.html
@@ -9,16 +9,16 @@
 </head>
 <body>
 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div class="container">
-        <a class="navbar-brand fw-bold" href="{{ url_for('index') }}">My Portfolio</a>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary shadow-sm">
+    <div class="container">
+        <a class="navbar-brand" href="{{ url_for('index') }}">Eduardo</a>
         <div class="collapse navbar-collapse">
-            <ul class="navbar-nav ms-auto">
-            <li class="nav-item"><a class="nav-link" href="{{ url_for('index') }}">Home</a></li>
-            <li class="nav-item"><a class="nav-link" href="{{ url_for('list_projects') }}">Projects</a></li>
-            </ul>
+        <ul class="navbar-nav ms-auto">
+            <li class="nav-item"><a class="nav-link" href="{{ url_for('index') }}">🏠 Home</a></li>
+            <li class="nav-item"><a class="nav-link" href="{{ url_for('list_projects') }}">💻 Projects</a></li>
+        </ul>
         </div>
-        </div>
+    </div>
     </nav>
 
     <main class="container my-5">
