--- a/templates/projects.html
+++ b/templates/projects.html
@@ -1,18 +1,21 @@
 {% extends "base.html" %}
-{% block title %}Home - My Portfolio {% endblock %}
+{% block title %} Projects - My Portfolio {% endblock %}
 {% block content %}
-    <h2 class="mb-4">My Projects</h2>
-    <div class="row">
-        {% for p in projects %}
-        <div class="col-md-4">
-            <div class="card mb-4 shadow-sm">
-                <div class="card-body">
-                    <h5 class="card-title">{{ p.title }}</h5>
-                    <p class="card-text">{{ p.description }}</p>
-                    <a href="{{ p.link }}" class="btn btn-sm btn-outline-primary" target="_blank">See on GitHub</a>
-                </div>
-            </div>
-        </div>
-        {% endfor %}
+<h2 class="mb-4 text-center">💻 My Projects</h2>
+<div class="row">
+  {% for p in projects %}
+  <div class="col-md-6 col-lg-4 mb-4">
+    <div class="card h-100 shadow-sm">
+      <img src="{{ url_for('static', filename='project.jpg') }}" class="card-img-top" alt="Project Image">
+      <div class="card-body">
+        <h5 class="card-title">{{ p.title }}</h5>
+        <p class="card-text">{{ p.description }}</p>
+      </div>
+      <div class="card-footer bg-white border-top-0">
+        <a href="{{ p.link }}" class="btn btn-outline-primary w-100" target="_blank">🔗 View on GitHub</a>
+      </div>
     </div>
+  </div>
+  {% endfor %}
+</div>
 {% endblock %}
